--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -55,27 +54,32 @@
         provider = new ethers.BrowserProvider(window.ethereum);
         signer = await provider.getSigner();
         contract = new ethers.Contract(contractAddress, abi, signer);
+
         const address = await signer.getAddress();
         const reward = await contract.rewards(address);
         const rewardETH = ethers.formatEther(reward);
 
-        document.getElementById("status").innerText = `✅ Connected: ${address}
-🎁 Reward: ${rewardETH} tMEGA`;
+        document.getElementById("status").innerText = `✅ Connected: ${address}\n🎁 Reward: ${rewardETH} tMEGA`;
       } catch (err) {
-        console.error(err);
+        console.error("Connect Error:", err);
         document.getElementById("status").innerText = "❌ Connect Wallet Failed";
       }
     }
 
     async function withdrawReward() {
       try {
+        if (!contract) {
+          document.getElementById("status").innerText = "❌ Wallet belum connect bro!";
+          return;
+        }
+
         document.getElementById("status").innerText = "⏳ Withdrawing...";
         const tx = await contract.withdrawReward();
         await tx.wait();
         document.getElementById("status").innerText = "✅ Reward withdrawn to wallet!";
       } catch (err) {
-        console.error(err);
-        document.getElementById("status").innerText = "❌ Error withdrawing: " + err.message;
+        console.error("Withdraw Error:", err);
+        document.getElementById("status").innerText = "❌ Withdraw Error: " + err.message;
       }
     }
   </script>
