--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Withdraw Reward</title>
+  <title>Fish Shooter Reward</title>
   <style>
     body {
       background-color: #121212;
@@ -10,6 +11,7 @@
       font-family: sans-serif;
       text-align: center;
       margin-top: 50px;
+      overflow: hidden;
     }
     button {
       padding: 10px 20px;
@@ -25,14 +27,33 @@
       margin-top: 20px;
       white-space: pre-line;
     }
+    .rain {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      background-image: url("https://gameflazz.com/assets/image/efek_hujan.gif");
+      background-size: cover;
+      opacity: 0.1;
+      z-index: 0;
+    }
+    .content {
+      position: relative;
+      z-index: 1;
+    }
   </style>
 </head>
 <body>
-  <h1>🎯 Fish Shooter Reward</h1>
-  <button onclick="connectWallet()">🔗 Connect Wallet</button>
-  <button onclick="withdrawReward()">💸 Withdraw Reward</button>
-  <button onclick="disconnectWallet()">🔌 Disconnect</button>
-  <p id="status">Status: Not connected</p>
+  <div class="rain"></div>
+  <div class="content">
+    <h1>🎯 Fish Shooter Reward</h1>
+    <button onclick="connectWallet()">🔗 Connect Wallet</button>
+    <button onclick="withdrawReward()">💸 Withdraw Reward</button>
+    <button onclick="disconnectWallet()">🔌 Disconnect</button>
+    <p id="status">Status: Not connected</p>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/ethers@6.6.2/dist/ethers.umd.min.js"></script>
   <script>
@@ -53,6 +74,13 @@
 
         await window.ethereum.request({ method: "eth_requestAccounts" });
 
+        const chainId = await window.ethereum.request({ method: "eth_chainId" });
+        if (chainId !== "0x31554") {
+          alert("⚠️ Ganti dulu ke Monad Testnet bro.");
+          document.getElementById("status").innerText = "❌ Salah jaringan: bukan Monad Testnet!";
+          return;
+        }
+
         provider = new ethers.BrowserProvider(window.ethereum);
         signer = await provider.getSigner();
         contract = new ethers.Contract(contractAddress, abi, signer);
@@ -62,7 +90,9 @@
         const rewardETH = ethers.formatEther(reward);
 
         document.getElementById("status").innerText =
-          `✅ Connected: ${address}\n🎁 Reward: ${rewardETH} tMEGA`;
+          `✅ Connected: ${address}
+🎁 Reward: ${rewardETH} tMEGA`;
+
       } catch (err) {
         console.error("Connect Error:", err);
         document.getElementById("status").innerText = "❌ Connect Wallet Failed";
@@ -90,8 +120,6 @@
       provider = undefined;
       signer = undefined;
       contract = undefined;
-
-      // Clear UI
       document.getElementById("status").innerText = "🔌 Wallet disconnected.";
     }
   </script>
